# SAADS

./: .env.example  .gitignore  INTELLIGENCE_SOURCES_UPDATE.md  README.md  demo.html  main.py  more_sources.md  plan.md  pyproject.toml  requirements.txt  session-ses_3cc7.md
demos/: intelligence_sources_demo.py
docs/diagrams/: 01_cyber_defense_pipeline.mmd  02_Intelligence-Collection-Module.mmd  03_Red-team-Orchestrator.mmd  arch.mmd  core-architecture.mmd
docs/reports/: WP1-1_技术实现报告.md
saads/: __init__.py  config.py
saads/agents/: __init__.py
saads/agents/wp1_1/: __init__.py  dark_web.py  graph.py  paper_analyzer.py  (+4 more)
saads/knowledge_base/: __init__.py  attack_pool_store.py  base.py  test_scripts_store.py  vuln_reports_store.py
saads/models/: __init__.py  attack.py  labeled_sample.py  trained_model.py  vuln_report.py
saads/tools/: __init__.py  api_tools.py  file_tools.py  llm_tools.py  web_tools.py
saads/utils/: logging.py  owasp_taxonomy.py
tests/: conftest.py
tests/scripts/: test_alienvault_fetch.py  test_all_new_sources.py  test_arxiv_fetch.py  test_dark_web_agent.py  test_exploitdb_fetch.py  test_github_fetch.py  test_hackernews_fetch.py  test_huggingface_fetch.py  test_nvd_fetch.py  test_paper_analyzer_agent.py  test_reddit_fetch.py  test_standardizer_agent.py  test_supervisor_agent.py  test_virustotal_fetch.py  test_web_crawler_agent.py  test_wp1_1_e2e.py
tests/test_agents/: __init__.py
tests/test_knowledge_base/: __init__.py
tests/test_models/: __init__.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
(+46 files in other folders)
