[project]
name = "SAADA"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.22.1",
    "langchain>=0.1.0",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=0.0.5",
    "python-dotenv>=1.0.0",

    "langgraph>=0.2.0",         
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0", 
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

